# minitorch

./: .gitignore  README.md
ascend/: CMakeLists.txt  ascend_api_list.h  run.sh  unary_op_kernal.cpp
ascend/cmake/: npu_lib.cmake
core/: CMakeLists.txt
core/src/: ascend_device_api.cpp  ascend_device_api.h  auto_grad.cpp  auto_grad.h  common.h  cpu_device_api.cpp  cpu_device_api.h  cuda_device_api.cpp  cuda_device_api.h  device_api.h  device_api_manager.h  dl_context.h  gpu_op.cu  stream_manager.cpp  stream_manager.h  tensor.cpp  tensor.h  tensor_backend.h  tensor_backend_atlas.cpp  tensor_backend_atlas.h  tensor_backend_cpu.cpp  tensor_backend_cpu.h  tensor_backend_gpu.h  tensor_backend_manager.h  tensor_context.h  tensor_data.cpp  tensor_data.h  tensor_function.cpp  tensor_function.h  tensor_helper.h  tensor_history.cpp  tensor_history.h
core/src/ascend/: CMakeLists.txt  ascend_api_list.cpp  ascend_api_list.h  binary_op_kernal.cpp  build.sh  custom_tiling.h  run.sh  unary_op_kernal.cpp
core/src/ascend/cmake/: cpu_lib.cmake  npu_lib.cmake
core/test/: pybind_test.cpp  shape  shape_type_traits.cpp  tensor_test.cpp
minitorch/: autodiff.py  cuda_ops.py  fast_ops.py  module.py  operators.py  scalar.py  scalar_functions.py  tensor.py  tensor_data.py  tensor_functions.py  tensor_ops.py
project/: run_scalar.py
tests/: test_operators.py
